# l-system-workshop

./: .gitignore  CONTRIBUTORS.md  LICENSE  MATERIAL-README.md  Makefile  README.md
book/: README.md  book.toml
book/src/: SUMMARY.md  api.md  cli.md  dependencies.md  extensions.md  interpreter.md  introduction.md  l-system.md  outline.md  overview.md  parser.md  renderer.md  workspaces.md
code/: .gitignore  Cargo.toml
code/.cargo/: config
code/api/: Cargo.toml
code/api/src/: lib.rs
code/examplar-interpreter/: Cargo.toml
code/examplar-interpreter/src/: lib.rs
code/examplar-parser/: Cargo.toml
code/examplar-parser/src/: framework.rs  lib.rs
code/examplar-renderer/: Cargo.toml
code/examplar-renderer/src/: crab.rs  lib.rs
code/interpreter/: Cargo.toml
code/interpreter/src/: lib.rs
code/parser/: Cargo.toml
code/parser/src/: framework.rs  lib.rs
code/renderer/: Cargo.toml
code/renderer/src/: lib.rs
code/src/: main.rs
code/system/: algae.ls  koch.ls  tree.ls
docs/: api.html  cli.html  dependencies.html  extensions.html  index.html  interpreter.html  introduction.html  l-system.html  outline.html  overview.html  parser.html  print.html  renderer.html  searchindex.js  searchindex.json  workspaces.html
docs/interpreter/: level.html  signature.html  what.html
docs/lsystem/: Aristid.html  algae.html  algae.ls.html  config.html  crab.html  expose.html  fun.html  koch.ls.html  plant.html  synthesis.html
docs/parser/: any.html  between.html  character.html  combinators.html  framework.html  function.html  literal.html  macros.html  map.html  (+5 more)
(+37 files in other folders)
