[package]
name = "lsystem"
version = "0.1.0"
authors = ["Phil Fried <philfried@gmail.com>", "Daan van Berkel <daan.v.berkel.1980@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
api = { path = "api" }
parser = { path = "examplar-parser" }
interpreter = { path = "examplar-interpreter" }
renderer = { path = "examplar-renderer"}
